Fixed donut sizes, donut upgrade screen (specifically the alignment of the text) and I started adding a bit more descriptions to donuts (up to flushed donut #65)

--- a/style.css
+++ b/style.css
@@ -36,11 +36,12 @@ body {
 
 .donut img {
     position: absolute;
-    width: 100px;
+    scale: 3.0;
+    transition: scale 0.1s ease;
 }
 
 .donut:hover img {
-    width: 120px;
+    scale: 3.5;
 }
 
 .energy {
@@ -186,21 +187,20 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 120px;
+    padding-top: 80px;
 }
 
 .donut-image {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: baseline;
 }
 
 .donut-image img {
     width: 600px;
     max-width: 600px;
     max-height: 400px;
-    padding-left: 150px;
 }
 
 .donut-image p {
@@ -221,7 +221,7 @@ body {
 
 .donut-info h2 {
     margin: 0;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     font-family: "optFancy", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -231,7 +231,7 @@ body {
 
 .donut-info p {
     margin: 0;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     font-family: "Info", sans-serif;
     font-weight: 400;
     font-style: normal;
